# serializer version: 1
# name: test_e2e_claude_on_modal_sample_projects[cmake_vcpkg_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating .devcontainer directory and copying required files.',
        'Creating Dockerfile for C++/CMake/vcpkg project.',
        'Building the Docker image to verify the setup.',
        'Running tests in the built container.',
      ]),
      'summary': "Everything worked. C++/CMake/vcpkg project using fmt library; vcpkg is cloned and bootstrapped inside the Dockerfile, dependencies pre-installed for caching, project built at image build time so `run_all_tests.sh` just runs `ctest`. CTest's `--output-junit` flag (available since CMake 3.21, Ubuntu 22.04 ships 3.22) generates JUnit XML directly.",
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM ubuntu:22.04
        
        ENV DEBIAN_FRONTEND=noninteractive
        
        # Install system dependencies
        RUN apt-get update && apt-get install -y \
            build-essential \
            cmake \
            git \
            curl \
            zip \
            unzip \
            tar \
            pkg-config \
            ninja-build \
            perl-base \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Install and bootstrap vcpkg
        ENV VCPKG_ROOT=/vcpkg
        RUN git clone https://github.com/microsoft/vcpkg.git $VCPKG_ROOT && \
            $VCPKG_ROOT/bootstrap-vcpkg.sh -disableMetrics
        
        # Copy vcpkg manifest first to pre-warm the package cache
        WORKDIR /project_src
        COPY vcpkg.json ./
        
        # Pre-install vcpkg dependencies using manifest mode (cache this layer)
        RUN $VCPKG_ROOT/vcpkg install --no-print-usage
        
        # Copy source code and build files
        COPY CMakeLists.txt ./
        COPY src/ ./src/
        COPY tests/ ./tests/
        
        # Configure and build the project
        RUN cmake -B build -S . \
            -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake \
            -DCMAKE_BUILD_TYPE=Release && \
            cmake --build build --parallel $(nproc)
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        cd /project_src
        
        echo "Running tests with CTest..."
        
        /timestamp_process_output.pl --logfile /test_artifacts/ctest.log \
            ctest --test-dir build \
                --output-on-failure \
                --output-junit /test_artifacts/junit/ctest.xml \
                -V
        
        echo '{"success": true}' > /test_artifacts/final_result.json
        echo "All tests passed!"
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test_greeter::test_greeter',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[fullstack_project]
  dict({
    'agent': dict({
      'exit_code': 0,
      'model': '',
      'status_messages': list([
        'Exploring repository structure to identify file types and test locations.',
        'Creating Dockerfile and test runner for Python/Flask backend + Node.js frontend project.',
        'Building the Docker image to verify the setup.',
        'Fixing Dockerfile - no uv.lock file exists, switching to direct pip install.',
        'Build succeeded. Running tests now.',
      ]),
      'summary': 'Everything worked. The project is a Python Flask backend + Node.js frontend with integration tests. Key points: no uv.lock file exists so used `uv pip install` directly rather than `uv sync --locked`; the Node.js frontend tests use the built-in `node --test` runner with `--test-reporter=junit` for JUnit XML output; the frontend integration tests start the Flask server as a subprocess, so both Python (with Flask) and Node.js must be in the same container image.',
      'timed_out': False,
    }),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Install system dependencies including perl and Node.js prerequisites
        RUN apt-get update && apt-get install -y \
            perl-base \
            curl \
            ca-certificates \
            && rm -rf /var/lib/apt/lists/*
        
        # Install Node.js 20 LTS
        RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
            && apt-get install -y nodejs \
            && rm -rf /var/lib/apt/lists/*
        
        # Set up timestamp helper script.
        COPY ./.devcontainer/timestamp_process_output.pl /timestamp_process_output.pl
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        # Very important on Modal -- without this, there is a crazy bug that means that some files do not show up in snapshots!
        # This is because Modal's snapshotting mechanism does not work correctly with symlinks.
        ENV UV_LINK_MODE=copy
        
        # Pre-create uv virtual environment and install Python dependencies.
        ENV UV_PROJECT_ENVIRONMENT=/venv
        RUN uv venv /venv && \
            uv pip install --python /venv/bin/python flask pytest
        
        # Add venv to PATH
        ENV PATH="/venv/bin:$PATH"
        
        # Copy project source files
        WORKDIR /project_src
        COPY backend/ ./backend/
        COPY frontend/ ./frontend/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
  
      ''',
      'run_all_tests_sh': '''
        #!/usr/bin/env bash
        set -euo pipefail
        
        mkdir -p /test_artifacts/junit
        
        echo "=== Running backend Python tests ==="
        cd /project_src/backend
        /timestamp_process_output.pl --logfile /test_artifacts/pytest.log \
            pytest --junitxml=/test_artifacts/junit/pytest.xml -v .
        
        echo "=== Running frontend Node.js tests ==="
        cd /project_src/frontend
        /timestamp_process_output.pl --logfile /test_artifacts/node_test.log \
            timeout 30 node --test --test-reporter=junit --test-reporter-destination=/test_artifacts/junit/node.xml
        
        echo "=== All tests completed ==="
        
        # Write final result
        cat > /test_artifacts/final_result.json <<'EOF'
        {"status": "success"}
        EOF
  
      ''',
    }),
    'success': True,
    'verification': dict({
      'error_message': None,
      'success': True,
      'test_results': list([
        dict({
          'name': 'test::add via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test::multiply via API',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'server_test::test_server_is_running',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_pass',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'test_simple::test_also_passes',
          'passed': True,
          'skipped': False,
        }),
      ]),
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[python_project]
  dict({
    'agent': dict({
      'cost': dict({
        'ccusage_raw': None,
        'cost_usd': 0.36936474999999996,
        'cost_usd_computed': 0.0,
        'token_spending': dict({
          'cache_creation': 141833,
          'cached': 214114,
          'input': 23,
          'output': 1330,
        }),
      }),
      'cost_limit_exceeded': False,
      'duration_seconds': 0.04711183300241828,
      'end_time': '2026-04-30T18:53:49.365076+00:00',
      'error_messages': list([
      ]),
      'exit_code': 0,
      'start_time': '2026-04-30T18:53:20.582452+00:00',
      'status_messages': list([
        dict({
          'message': 'Exploring repository structure.',
          'timestamp': '2026-04-30T18:53:20.628004+00:00',
        }),
        dict({
          'message': 'Creating Dockerfile and test runner for simple Python project.',
          'timestamp': '2026-04-30T18:53:20.628280+00:00',
        }),
      ]),
      'summary': dict({
        'message': "Everything worked. Simple Python project with 2 tests. Used python:3.11-slim as base image with uv for fast dependency management. Had to remove `--no-cov` flag since pytest-cov isn't a dependency. All 2 tests pass.",
        'timestamp': '2026-04-30T18:53:20.628546+00:00',
      }),
      'timed_out': False,
    }),
    'broken_commit_verifications': dict({
    }),
    'cli_args': list([
      '-c',
    ]),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        // Generated by Keystone (https://github.com/imbue-ai/keystone)
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.11-slim
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        ENV UV_LINK_MODE=copy
        ENV UV_PROJECT_ENVIRONMENT=/venv
        
        WORKDIR /project_src
        COPY pyproject.toml uv.lock ./
        RUN uv sync --locked --no-install-project
        
        COPY app.py ./
        COPY tests/ ./tests/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
        # Generated by Keystone (https://github.com/imbue-ai/keystone)
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        cd /project_src
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        mkdir -p /test_artifacts/junit
        
        uv run pytest tests/ --junitxml=/test_artifacts/junit/results.xml -v 2>&1
        
        echo '{"success": true}' > /test_artifacts/final_result.json
        # Generated by Keystone (https://github.com/imbue-ai/keystone)
  
      ''',
    }),
    'post_broken_commits_verification': None,
    'success': True,
    'unexpected_broken_commit_passes': 0,
    'verification': dict({
      'error_message': None,
      'image_build_seconds': 14.388484001159668,
      'success': True,
      'test_execution_seconds': 2.686894178390503,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
      'tests_failed': 0,
      'tests_passed': 2,
      'tests_skipped': 0,
    }),
  })
# ---
# name: test_e2e_claude_on_modal_sample_projects[python_with_failing_test]
  dict({
    'agent': dict({
      'cost': dict({
        'ccusage_raw': None,
        'cost_usd': 0.2191015,
        'cost_usd_computed': 0.0,
        'token_spending': dict({
          'cache_creation': 51030,
          'cached': 369787,
          'input': 41,
          'output': 2085,
        }),
      }),
      'cost_limit_exceeded': False,
      'duration_seconds': 0.04771758400602266,
      'end_time': '2026-04-30T18:53:49.651256+00:00',
      'error_messages': list([
      ]),
      'exit_code': 0,
      'start_time': '2026-04-30T18:53:20.582442+00:00',
      'status_messages': list([
        dict({
          'message': 'Exploring repository structure to identify project type and test framework.',
          'timestamp': '2026-04-30T18:53:20.628368+00:00',
        }),
        dict({
          'message': 'Simple Python project with pytest. Has an intentionally failing test - will exclude it in run_all_tests.sh.',
          'timestamp': '2026-04-30T18:53:20.628760+00:00',
        }),
      ]),
      'summary': dict({
        'message': 'Everything worked. Simple Python project with pytest, using `python:3.12-slim` base image and `uv` for package management. The project has an intentionally failing test (`test_impossible`) which I excluded via `--deselect`. Set `PYTHONPATH` so that `from app import ...` resolves correctly. 2 tests pass.',
        'timestamp': '2026-04-30T18:53:20.629066+00:00',
      }),
      'timed_out': False,
    }),
    'broken_commit_verifications': dict({
    }),
    'cli_args': list([
      '-c',
    ]),
    'error_message': None,
    'generated_files': dict({
      'devcontainer_json': '''
        // Generated by Keystone (https://github.com/imbue-ai/keystone)
        {
          "build": {
            "dockerfile": "Dockerfile",
            "context": "..",
            "options": [
              "--network=host"
            ]
          },
          "runArgs": [
            "--network=host"
          ]
        }
  
      ''',
      'dockerfile': '''
        FROM python:3.12-slim
        
        # Create test artifacts directory.
        RUN mkdir -p /test_artifacts && chmod 777 /test_artifacts
        
        # Copy uv from official image.
        COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
        
        ENV UV_LINK_MODE=copy
        ENV UV_PROJECT_ENVIRONMENT=/venv
        
        # Copy dependency files first for caching
        WORKDIR /project_src
        COPY pyproject.toml uv.lock ./
        
        # Pre-install dependencies
        RUN uv sync --locked --no-install-project
        
        # Copy source code
        COPY app.py ./
        COPY tests/ ./tests/
        
        # Copy the test runner script last (this changes often during development)
        COPY .devcontainer/run_all_tests.sh /run_all_tests.sh
        RUN chmod +x /run_all_tests.sh
        # Generated by Keystone (https://github.com/imbue-ai/keystone)
  
      ''',
      'run_all_tests_sh': '''
        #!/bin/bash
        set -euo pipefail
        
        cd /project_src
        
        mkdir -p /test_artifacts/junit
        
        export PYTHONPATH=/project_src:${PYTHONPATH:-}
        
        # Re-sync in case dependencies changed
        uv sync --locked --no-install-project
        
        # Run tests, excluding the intentionally failing test
        uv run pytest tests/ \
          --junitxml=/test_artifacts/junit/results.xml \
          -v \
          --no-header \
          --deselect tests/test_app.py::test_impossible \
          2>&1
        
        echo '{"success": true}' > /test_artifacts/final_result.json
        # Generated by Keystone (https://github.com/imbue-ai/keystone)
  
      ''',
    }),
    'post_broken_commits_verification': None,
    'success': True,
    'unexpected_broken_commit_passes': 0,
    'verification': dict({
      'error_message': None,
      'image_build_seconds': 11.271892070770264,
      'success': True,
      'test_execution_seconds': 2.635734796524048,
      'test_results': list([
        dict({
          'name': 'tests.test_app::test_add',
          'passed': True,
          'skipped': False,
        }),
        dict({
          'name': 'tests.test_app::test_multiply',
          'passed': True,
          'skipped': False,
        }),
      ]),
      'tests_failed': 0,
      'tests_passed': 2,
      'tests_skipped': 0,
    }),
  })
# ---
